@@ -9,6 +9,7 @@
 * Add App55 gateway [ianbutler55]
 * UsaEpayTransaction: Support for split payments [GBH]
 * Add Swipe Checkout gateway [matt-optimizerhq]
+* Spreedly Core: Allow overriding the gateway token when running a transaction [hoenth]
 
 == Version 1.41.0 (October 24th, 2013)
 
